# cvnp_nano

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  requirements.txt
.github/workflows/: ubuntu.yml
cvnp_nano/: cvnp_nano.cpp  cvnp_nano.h  cvnp_nano_synonyms.h
example/: cvnp_nano_example.cpp
src/: cvnp_nano.cpp  cvnp_nano.h  cvnp_nano_synonyms.cpp
tests/: test_cvnp_nano.cpp  test_cvnp_nano.py
